--- a/Styles.css
+++ b/Styles.css
@@ -1,16 +1,19 @@
 fieldset {
-    margin: 2em 0;
-    padding: 1em 2em;
+    margin: 20px;
+    padding: 10px;
+    display: inline-block;
 
 }
 
 legend {
     padding: auto;
+    display: inline-block;
 }
 
 form{
-    width: 400px;
+    width: 20px;
     height: 50px;
+    display: inline-block;
 }
 
 table{
@@ -31,9 +34,4 @@ td{
     background-color: aliceblue;
 }
 
-#loginlink{
-    float: right;
-    text-align: right;
-    position: relative;
-}
 
